--- a/ManwhaWebsite/wwwroot/css/site.css
+++ b/ManwhaWebsite/wwwroot/css/site.css
@@ -29,3 +29,17 @@ body {
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
   text-align: start;
 }
+
+.trending {
+    display: flex;
+    height: 100%;
+    border: 3px solid red;
+}
+
+.trending .left {
+    width: 50%;
+}
+
+    .trending .right {
+        width: 50%;
+    }
